--- a/requirements.txt
+++ b/requirements.txt
@@ -5,10 +5,10 @@ tensorflow-hub>=0.14.0
 torch>=2.0.0
 transformers>=4.37.0
 pillow>=10.0.0
-pytesseract>=0.3.10
-opencv-python>=4.8.0
 numpy>=1.24.0
 scikit-learn>=1.3.0
 qwen-vl-utils>=0.0.1
 accelerate>=0.25.0
 sentencepiece>=0.1.99
+sentence-transformers>=2.2.2
+bitsandbytes>=0.41.0
